KubeAzureCluster/ARMTemplates/cluster.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "String",
            "defaultValue": "[resourceGroup().location]"
        },
        "localIPAddress": {
            "type": "String"
        },
        "publicIPAddressName": {
            "type": "String"
        },
        "virtualNetworkName": {
            "type": "String"
        },
        "virtualNetworkAddressPrefix": {
            "type": "String"
        },
        "subnetName": {
            "type": "String"
        },
        "subnetAddressPrefix": {
            "type": "String"
        },
        "networkSecurityGroupName": {
            "type": "String"
        },
        "useLoadBalancer": {
            "type": "Bool"
        },
        "loadBalancerName": {
            "type": "String"
        },
        "backendPoolName": {
            "type": "String"
        },
        "networkInterfaceName": {
            "type": "String"
        },
        "vmName": {
            "type": "String"
        },
        "vmComputerName": {
            "type": "String"
        },
        "adminUsername": {
            "type": "String"
        },
        "adminPassword": {
            "type": "String"
        },
        "vmSize": {
            "type": "String"
        },
        "vmStorageAccountType": {
            "type": "String"
        },
        "vmImageResourceGroupName": {
            "type": "String"
        },
        "vmImageName": {
            "type": "String"
        }
    },
    "variables": {
        "vmImageId": "[resourceId(parameters('vmImageResourceGroupName'), 'Microsoft.Compute/images', parameters('vmImageName'))]",
        "virtualNetworkId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddressName'))]",
        "subnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
        "frontendIPConfigurationsName": "frontendIPConfig",
        "frontendIPConfigurationsId": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', parameters('loadBalancerName'), variables('frontendIPConfigurationsName'))]",
        "backendAddressPoolId": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancerName'), parameters('backendPoolName'))]",
        "networkSecurityGroupId": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]",
        "httpProbeName": "httpProbe",
        "httpProbeId": "[resourceId('Microsoft.Network/loadBalancers/probes', parameters('loadBalancerName'), variables('httpProbeName'))]",
        "controlPlaneEndpointProbeName": "controlPlaneEndpointProbe",
        "controlPlaneEndpointProbeId": "[resourceId('Microsoft.Network/loadBalancers/probes', parameters('loadBalancerName'), variables('controlPlaneEndpointProbeName'))]",
        "nicId": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceName'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-01-01",
            "name": "[parameters('networkSecurityGroupName')]",
            "dependsOn": [
                "[variables('publicIPAddressId')]"
            ],
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "[if(parameters('useLoadBalancer'), '30080', '80')]",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 220,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('localIPAddress')]",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 210,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "kube-control-plane-endpoint-rule",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6443",
                            "sourceAddressPrefix": "[reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('publicIPAddressName'))).ipAddress]",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2024-01-01",
            "name": "[parameters('publicIPAddressName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 15,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-01-01",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('virtualNetworkAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetAddressPrefix')]",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "condition": "[parameters('useLoadBalancer')]",
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2024-01-01",
            "name": "[parameters('loadBalancerName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('publicIPAddressId')]"
            ],
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "[variables('frontendIPConfigurationsName')]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[variables('publicIPAddressId')]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[parameters('backendPoolName')]"
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "lbHttpRule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontendIPConfigurationsId')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 30080,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 15,
                            "protocol": "Tcp",
                            "enableTcpReset": false,
                            "loadDistribution": "Default",
                            "disableOutboundSnat": true,
                            "backendAddressPool": {
                                "id": "[variables('backendAddressPoolId')]"
                            },
                            "probe": {
                                "id": "[variables('httpProbeId')]"
                            }
                        }
                    },
                    {
                        "name": "lbControlPlaneEndpointRule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontendIPConfigurationsId')]"
                            },
                            "frontendPort": 6443,
                            "backendPort": 6443,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "enableTcpReset": false,
                            "loadDistribution": "Default",
                            "disableOutboundSnat": true,
                            "backendAddressPool": {
                                "id": "[variables('backendAddressPoolId')]"
                            },
                            "probe": {
                                "id": "[variables('controlPlaneEndpointProbeId')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "[variables('httpProbeName')]",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 30080,
                            "intervalInSeconds": 15,
                            "numberOfProbes": 1,
                            "probeThreshold": 1,
                            "noHealthyBackendsBehavior": "AllProbedDown"
                        }
                    },
                    {
                        "name": "[variables('controlPlaneEndpointProbeName')]",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 6443,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 1,
                            "probeThreshold": 1,
                            "noHealthyBackendsBehavior": "AllProbedDown"
                        }
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "inboundNatRule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontendIPConfigurationsId')]"
                            },
                            "frontendPort": 0,
                            "backendPort": 22,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "enableTcpReset": false,
                            "frontendPortRangeStart": 50000,
                            "frontendPortRangeEnd": 53599,
                            "backendAddressPool": {
                                "id": "[variables('backendAddressPoolId')]"
                            }
                        }
                    }
                ],
                "outboundRules": [
                    {
                        "name": "outboundRule",
                        "properties": {
                            "allocatedOutboundPorts": 0,
                            "protocol": "All",
                            "enableTcpReset": true,
                            "idleTimeoutInMinutes": 4,
                            "backendAddressPool": {
                                "id": "[variables('backendAddressPoolId')]"
                            },
                            "frontendIPConfigurations": [
                                {
                                    "id": "[variables('frontendIPConfigurationsId')]"
                                }
                            ]
                        }
                    }
                ],
                "inboundNatPools": []
            }
        },
        {
            "condition": "[not(parameters('useLoadBalancer'))]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[parameters('networkInterfaceName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('networkSecurityGroupId')]",
                "[variables('virtualNetworkId')]"
            ],
            "properties": {
                "primary": true,
                "enableAcceleratedNetworking": false,
                "disableTcpStateTracking": false,
                "networkSecurityGroup": {
                    "id": "[variables('networkSecurityGroupId')]"
                },
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": true,
                "ipConfigurations": [
                    {
                        "name": "ipConfig",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "primary": true,
                            "publicIPAddress": {
                                "id": "[variables('publicIPAddressId')]"
                            },
                            "subnet": {
                                "id": "[variables('subnetId')]"
                            },
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ]
            }
        },
        {
            "condition": "[not(parameters('useLoadBalancer'))]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2024-03-01",
            "name": "[parameters('vmName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceName'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[parameters('vmComputerName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "[parameters('vmStorageAccountType')]"
                        },
                        "diskSizeGB": 30
                    },
                    "imageReference": {
                        "id": "[variables('vmImageId')]"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[variables('nicId')]"
                        }
                    ]
                }
            }
        }
    ]
}
